<!--
  ~ Copyright 2017 Fantasy Fang
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="choose_country">Choose country</string>
    <string name="choose_grid">Choose grid</string>
    <string name="choose_default_country">Choose default country</string>
    <string name="trend_error">Do not have the newest trend.</string>

    <string-array name="grid_item_name" translatable="false">
        <item>1*1</item>
        <item>2*1</item>
        <item>3*1</item>
        <item>1*2</item>
        <item>2*2</item>
        <item>3*2</item>
        <item>1*3</item>
        <item>2*3</item>
        <item>3*3</item>
    </string-array>

   <!--TODO:Remove-->
    <string-array name="trend_country_name" translatable="false">
        <item>Argentina</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Belgium</item>
        <item>Brazil</item>
        <item>Canada</item>
        <item>Chile</item>
        <item>Colombia</item>
        <item>Czech Republic</item>
        <item>Denmark</item>
        <item>Egypt</item>
        <item>Finland</item>
        <item>France</item>
        <item>Germany</item>
        <item>Greece</item>
        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Japan</item>
        <item>Kenya</item>
        <item>Malaysia</item>
        <item>Mexico</item>
        <item>Netherlands</item>
        <item>Nigeria</item>
        <item>Norway</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Saudi Arabia</item>
        <item>Singapore</item>
        <item>South Africa</item>
        <item>South Korea</item>
        <item>Spain</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Taiwan</item>
        <item>Thailand</item>
        <item>Turkey</item>
        <item>Ukraine</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>Vietnam</item>
    </string-array>


    <string-array name="click_behavior_item_name">
        <item>Go to google search</item>
        <item>Change single country</item>
    </string-array>


    <string-array name="demoTrendArray" translatable="false">
        <item>Google</item>
        <item>Apple</item>
        <item>IBM</item>
        <item>Microsoft</item>
        <item>HTC</item>
        <item>Amazon</item>
        <item>OPPO</item>
        <item>Asus</item>
    </string-array>
</resources>
