<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2017 Fantasy Fang
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/gridNum"
        android:icon="@drawable/ic_dashboard_white_24dp"
        android:orderInCategory="1"
        android:title="@string/choose_grid"
        app:showAsAction="always" />

    <item
        android:id="@+id/defaultCountry"
        android:icon="@drawable/ic_public_white_24dp"
        android:orderInCategory="2"
        android:title="@string/choose_default_country"
        app:showAsAction="always" />

</menu>